2010.05, Not yet released

	Cleaned up / restructured package menu.

	Toolchain: uClibc 0.9.30.3 / 0.9.31, older 0.9.30.x removed.
	2.6.33 kernel headers, binutils 2.20.1, removed broken nios2
	support, ppc e300cX/e500mc support, improved external
	toolchain support.

	X.org updated to 7.5.

	New packages: librsync, libusb-compat, lmbench, netperf, squid

	Updated/fixed packages: busybox, dnsmasq, dosfstools,
	e2fsprogs, fbv, freetype, iperf, iptables, iw, less,
	libaio,libdrm, libgcrypt, libglib2, libpng, libxml2, matchbox,
	mdadm, memstat, mesa3d, mtd-utils, nano, openssl, php, pixman,
	pppd, pthread-stubs, qt, radvd, setserial, squashfs,
	usb_modeswith, wget, xdriver_xf86-video-intel,
	xkeyboard-config, xlib_libX11, xlib_libXfont,
	xlib_libXfontcache, xlib_libXxf86misc, xlib_libpciaccess,
	xproto_dri2proto, xproto_eviext, xproto_fontcacheproto,
	xproto_xf86miscproto

	Issues resolved (http://bugs.uclibc.org):

	#513: Add new squid package
	#661: lmbench: new package
	#800: [PATCH] iperf update to 2.0.4
	#805: [PATCH] mdadm - version update
	#817: integrator926_defconfig uses unsupported uboot board name
	#851: Add option to specify --sysroot value for external toolchain
	#1093: Upgrade libusb to v1.0.3 and add new libusb-compat
               package for compatibility with old packages that expect
               the pre-1.0 API.
	#1105: Add new netperf package
	#1111: Bump wget to 1.12 and migrate to Makefile.autotools.in
	#1117: Bump nano to 2.2.3 and migrate to Makefile.autotools.in
	#1123: Bump less to 436 and migrate to Makefile.autotools.in
	#1129: Bump memstat to 0.8 and migrate to Makefile.package.in
	#1189: Wrong u-boot configuration name for integrator926 target
	#1219: kernel headers not correctly installed into toolchain/staging
	#1273: BR2_INET_IPV6 does not enable IPv6 in pppd
	#1303: Add librsync package
	#1327: mtd-utils compile failure due to lack of --sysroot in CFLAGS
	#1345: Bump pppd to 2.4.5 and convert to Makefile.autotools.in