@@ -297,6 +297,7 @@ source "package/libupnp/Config.in"
 endmenu
 
 menu "Other"
+source "package/libatomic_ops/Config.in"
 source "package/libcap/Config.in"
 source "package/libdaemon/Config.in"
 source "package/libelf/Config.in"
